--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&family=Source+Serif+4:ital,opsz,wght@0,8..60,300;0,8..60,400;0,8..60,500;0,8..60,600;1,8..60,400;1,8..60,500&family=JetBrains+Mono:wght@400;500&display=swap"
             rel="stylesheet"
         />
+        <style>
+            body {
+                background-color: #1a1918; /* ink-950 */
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
         <div id="root"></div>
